Added Tests, Switched to JDK 8.
* Moved Task to its rightful task package.
* Added some tests for login.
* Moved trivial model member initializations/creations to the appropriate Dagger Module.
* Switched o JDK 8 from JDK 7; this allows us to use the lambda expressions.